plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.techfork'
version = '0.0.1-SNAPSHOT'
description = '주요 테크 블로그를 수집하고 제공하는 통합 플랫폼'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', "1.0.3")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Test Containers
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:mysql:1.21.4'
	testImplementation 'org.testcontainers:elasticsearch:1.21.4'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
	testImplementation 'com.redis:testcontainers-redis:2.2.4'

	// WireMock for API mocking
	testImplementation 'org.wiremock:wiremock-standalone:3.9.2'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	runtimeOnly 'com.mysql:mysql-connector-j'
	testRuntimeOnly 'com.h2database:h2'  // 테스트용 in-memory database

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

	// Spring Batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.batch:spring-batch-integration'
	testImplementation 'org.springframework.batch:spring-batch-test'

	// RSS Parsing
	implementation 'com.rometools:rome:2.1.0'
	implementation 'com.rometools:rome-modules:2.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	testImplementation 'org.springframework.security:spring-security-test'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	implementation 'org.springframework.ai:spring-ai-anthropic'
	implementation 'org.springframework.ai:spring-ai-openai'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Resilience4j - Circuit Breaker, Rate Limiter, Retry
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-retry:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-reactor:2.2.0'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform {
		if (project.hasProperty('excludeIntegration')) {
			excludeTags 'integration'
		}
		excludeTags 'evaluation-setup', 'evaluation'
	}

	testLogging {
		events "passed", "skipped", "failed"
		exceptionFormat "full"
		showStandardStreams = false
	}
}

tasks.register('integrationTest', Test) {
	useJUnitPlatform {
		includeTags 'integration'
		excludeTags 'evaluation-setup', 'evaluation'
	}

	testLogging {
		events "passed", "skipped", "failed"
		exceptionFormat "full"
		showStandardStreams = false
	}

	shouldRunAfter tasks.named('test')
}

tasks.register('evaluationTest', Test) {
	useJUnitPlatform {
		includeTags 'evaluation'
		excludeTags 'evaluation-setup', 'integration'
	}

	testLogging {
		events "passed", "skipped", "failed"
		exceptionFormat "full"
	}
}